@@ -2,12 +2,13 @@ Roxygen: list(wrap = FALSE)
 Package: phylobase
 Type: Package
 Title: Base package for phylogenetic structures and comparative data
-Version: 0.6.9-1
+Version: 0.6.9-2
 Date: 2014-04-08
 Imports:
     ade4,
     ape (>= 3.0),
-    Rcpp (>= 0.11.0)
+    Rcpp (>= 0.11.0),
+    RNeXML
 Depends:
     grid,
     methods
