@@ -1,4 +1,4 @@
-# Generated by roxygen2 (4.0.0.99): do not edit by hand
+# Generated by roxygen2 (4.0.1): do not edit by hand
 
 export("edgeLabels<-")
 export("edgeLength<-")
@@ -78,6 +78,7 @@ exportMethods(show)
 exportMethods(subset)
 exportMethods(summary)
 exportMethods(tail)
+import(RNeXML)
 import(ape)
 import(methods)
 importFrom(Rcpp,evalCpp)
