@@ -1,8 +1,10 @@
 % Generated by roxygen2 (4.0.1): do not edit by hand
 \docType{methods}
 \name{phylo4-methods}
+\alias{nexml,phylo4-method}
 \alias{phylo4}
 \alias{phylo4,matrix-method}
+\alias{phylo4,nexml-method}
 \alias{phylo4,phylo-method}
 \alias{phylo4-methods}
 \alias{phylo4_orderings}
@@ -20,6 +22,8 @@ phylo4_orderings
 
 \S4method{phylo4}{phylo}(x, check.node.labels = c("keep", "drop"),
   annote = list())
+
+\S4method{phylo4}{nexml}(x)
 }
 \arguments{
 \item{x}{a matrix of edges or an object of class \code{phylo} (see above)}
@@ -71,6 +75,10 @@ label vectors are optional, and if they are not given, internally-generated
 labels will be assigned. The labels, whether user-specified or internally
 generated, must be unique as they are used to join species data with
 phylogenetic trees.
+
+\code{phylobase} also allows to create \code{phylo4} objects using
+the function \code{phylo4()} from objects of the classes:
+\code{phylo} (from \code{ape}), and \code{nexml} (from \code{RNeXML}).
 }
 \note{
 Translation functions are available from many valid tree formats. See
