@@ -1,9 +1,11 @@
 % Generated by roxygen2 (4.0.1): do not edit by hand
 \docType{methods}
 \name{phylo4d}
+\alias{nexml,phylo4d-method}
 \alias{phylo4d}
 \alias{phylo4d,matrix,matrix-method}
 \alias{phylo4d,matrix-method}
+\alias{phylo4d,nexml-method}
 \alias{phylo4d,phylo,phylo-method}
 \alias{phylo4d,phylo-method}
 \alias{phylo4d,phylo4,phylo4-method}
@@ -27,10 +29,12 @@ phylo4d(x, ...)
   annote = list(), metadata = list(), ...)
 
 \S4method{phylo4d}{phylo4d}(x, ...)
+
+\S4method{phylo4d}{nexml}(x)
 }
 \arguments{
-\item{x}{an object of class \code{phylo4}, \code{phylo} or a matrix of edges
-(see above)}
+\item{x}{an object of class \code{phylo4}, \code{phylo},
+\code{nexml} or a matrix of edges (see above)}
 
 \item{tip.data}{a data frame (or object to be coerced to one) containing
 only tip data (Optional)}
